Add Ability to get user with assocs
