# x-library-api-spec.yaml
@@ -282,6 +282,42 @@ paths:
               schema:
                 $ref: "#/components/schemas/review_resp"
 
+  "/api/users/{id}":
+    parameters:
+      - name: id
+        in: path
+        required: true
+        description: ID of the user
+        schema:
+          type: string
+
+    get:
+      summary: Get the Profile of the given User
+      tags: ["Library"]
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: User Profile with reviews and books
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+
+  "/api/users/me":
+    get:
+      summary: Get the Prifle of the currently signed in user
+      tags: ["Library"]
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Profile of the given User with reviews and books
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/user"
+
 components:
   schemas:
     book_resp:
@@ -382,9 +418,16 @@ components:
     user:
       type: object
       properties:
+        id:
+          type: string
+          description: ID of the user
         email:
           type: string
           description: Email of the user
+        books_read:
+          $ref: "#/components/schemas/book"
+        reviews:
+          $ref: "#/components/schemas/review"
 
     review_req:
       type: object
